--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+   "username": "root",
+  "password": "syafrina416",
+  "database": "library_system_db",
+  "host": "127.0.0.1",
+  "port": 3307, 
+  "dialect": "mysql"
   },
   "test": {
     "username": "root",
